text no longer clipped.

--- a/css/style.css
+++ b/css/style.css
@@ -429,7 +429,7 @@ a {
         z-index: 1000;
         width: 85%;
         margin: 0 auto;
-        overflow: hidden;
+        /* overflow: hidden; */
         display: flex;
     }
 
